--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Deploy FastAPI to EC2
+name: Deploy FastAPI to EC2 via OpenVPN
 
 on:
   push:
@@ -14,26 +14,36 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      # 2. Docker 이미지 빌드
-      - name: Build Docker image
-        run: |
-          docker build -t jm-story-be-dev .
+      # 2. OpenVPN 클라이언트 설치
+      - name: Install OpenVPN
+        run: sudo apt-get update && sudo apt-get install -y openvpn
 
-      # 3. Docker Hub 로그인
+      # 3. OpenVPN 연결 (GitHub Secrets에서 OVPN 파일 가져오기)
+      - name: Connect to OpenVPN
+        run: |
+          echo "${{ secrets.OPENVPN_CONFIG }}" > client.ovpn
+          sudo openvpn --config client.ovpn --daemon
+          sleep 10  # VPN 연결 대기
+
+      # 4. Docker 이미지 빌드
+      - name: Build Docker image
+        run: docker build -t jm-story-be-dev .
+
+      # 5. Docker Hub 로그인
       - name: Log in to Docker Hub
         run: echo "${{ secrets.DOCKER_HUB_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_HUB_USERNAME }}" --password-stdin
 
-      # 4. Docker Hub에 이미지 푸시
+      # 6. Docker Hub에 이미지 푸시
       - name: Push Docker image to Docker Hub
         run: |
           docker tag jm-story-be-dev ${{ secrets.DOCKER_HUB_USERNAME }}/jm-story-be-dev:latest
           docker push ${{ secrets.DOCKER_HUB_USERNAME }}/jm-story-be-dev:latest
 
-      # 5. EC2 서버에 SSH 접속하여 기존 컨테이너 중지 및 새 컨테이너 실행
-      - name: Deploy to EC2
+      # 7. OpenVPN을 통해 EC2에 SSH 접속하여 배포
+      - name: Deploy to EC2 via VPN
         uses: appleboy/ssh-action@v0.1.10
         with:
-          host: ${{ secrets.EC2_HOST }}
+          host: ${{ secrets.EC2_PRIVATE_IP }}  # VPN을 통해 접속 가능
           username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.EC2_SSH_KEY }}
           script: |
