--- a/appspec.yml
+++ b/appspec.yml
@@ -8,14 +8,14 @@ hooks:
   ApplicationStop:
     - location: scripts/stop.sh
       timeout: 60
-      runas: ec2-user
+      runas: ubuntu
 
   AfterInstall:
     - location: scripts/after_install.sh
       timeout: 300
-      runas: ec2-user
+      runas: ubuntu
 
   ApplicationStart:
     - location: scripts/start.sh
       timeout: 300
-      runas: ec2-user
+      runas: ubuntu
