--- a/appspec.yml
+++ b/appspec.yml
@@ -1,21 +1,11 @@
 version: 0.0
 os: linux
 files:
-  - source: /
-    destination: /home/ec2-user/app
+  - source: .
+    destination: /home/ubuntu
 
 hooks:
-  ApplicationStop:
-    - location: scripts/stop.sh
-      timeout: 60
-      runas: ubuntu
-
   AfterInstall:
-    - location: scripts/after_install.sh
-      timeout: 300
-      runas: ubuntu
-
-  ApplicationStart:
-    - location: scripts/start.sh
+    - location: scripts/deploy.sh
       timeout: 300
       runas: ubuntu
