--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ name: Deploy FastAPI via CodeDeploy
 on:
   push:
     branches:
-      - develop
+      - main
 
 env:
   AWS_REGION: ap-northeast-2
