--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,12 +25,6 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ env.AWS_REGION }}
 
-      - name: Debug SSM
-        run: |
-          aws ssm describe-parameters --query "Parameters[?starts_with(Name, '/jm-story/dev')].Name"
-
-
-
       - name: Fetch deployment parameters from SSM
         id: ssm
         run: |
@@ -38,7 +32,7 @@ jobs:
           APP_NAME=$(aws ssm get-parameter --name "/${{ env.PROJECT }}/${{ env.STAGE }}/CODEDEPLOY_APP" --query "Parameter.Value" --output text)
           DEPLOY_GROUP=$(aws ssm get-parameter --name "/${{ env.PROJECT }}/${{ env.STAGE }}/CODEDEPLOY_GROUP" --query "Parameter.Value" --output text)
           S3_BUCKET=$(aws ssm get-parameter --name "/${{ env.PROJECT }}/${{ env.STAGE }}/S3_DEPLOY_BUCKET" --query "Parameter.Value" --output text)
-          DATABASE_URL=$(aws ssm get-parameter --name "/${{ env.PROJECT }}/${{ env.STAGE }}/RDS_ENDPOINT" --query "Parameter.Value" --output text)
+          DATABASE_URL=$(aws ssm get-parameter --name "/${{ env.PROJECT }}/${{ env.STAGE }}/DATABASE_URL" --query "Parameter.Value" --output text)
 
           echo "ecr_uri=$ECR_URI" >> $GITHUB_OUTPUT
           echo "app_name=$APP_NAME" >> $GITHUB_OUTPUT
